--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,10 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.0.1",
     "nodemon": "^3.1.11"
-  },
-  "devDependencies": {}
+  }
 }
